--- a/cleanupCrew/frontend/src/components/loginLogo/loginLogo.scss
+++ b/cleanupCrew/frontend/src/components/loginLogo/loginLogo.scss
@@ -1,9 +1,9 @@
-.startLogoSection{
+.loginLogoSection{
     margin-bottom: 10rem;
     display: flex;
     position: absolute;
-    top: 16rem;
-    .startLogo{
+    top: 6rem;
+    .loginLogo{
         height: 55vw;
     }
 }
