--- a/cleanupCrew/frontend/src/pageComponents/loginScreen/loginScreen.scss
+++ b/cleanupCrew/frontend/src/pageComponents/loginScreen/loginScreen.scss
@@ -5,16 +5,24 @@ html{
     box-sizing: border-box;
 }
 
+body{
+    height: 100%;
+    width: 100%;
+    margin: 0;
+}
+
 #root{
     height: 100%;
     width: 100%;
 }
 
-.splashBody {
+.loginBody {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     background: rgb(168,223,138);
     background: linear-gradient(210deg, rgba(168,223,138,1) 14%, rgba(255,255,255,1) 26%, rgba(255,255,255,1) 36%, rgba(255,255,255,1) 71%, rgba(254,235,168,1) 100%);
     height: 100vh;
     width: 100%;
 }
-
 
