--- a/cleanupCrew/frontend/src/components/loginSection/loginSection.scss
+++ b/cleanupCrew/frontend/src/components/loginSection/loginSection.scss
@@ -1,14 +1,11 @@
 @import '../../var.scss';
 
-.loginSection{
+.loginSection {
     display: flex;
     flex-direction: column;
-    position: absolute;
-    top: 25rem;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    input{
+    input {
         margin-bottom: 2rem;
         text-decoration: none;
         opacity: 100;
@@ -16,11 +13,11 @@
         border-bottom: 1px solid black;
         width: 15rem;
     }
-    input::placeholder{
+    input::placeholder {
         color: black;
         opacity: 100;
     }
-    button{
+    button {
         width: 12rem;
         background-color: $color-light-green;
         border: 0;
@@ -28,9 +25,25 @@
         padding-top: 8px;
         padding-bottom: 8px;
     }
+    .loginForm {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: relative; /* Ajout pour positionner le message d'erreur */
+    }
+    .error {
+        position: absolute; /* Positionnement absolu pour ne pas affecter le layout */
+        top: 100%; /* Positionne le message juste en dessous du formulaire */
+        margin-top: 1rem; /* Espacement supplémentaire */
+        color: red; /* Couleur pour le message d'erreur */
+        font-size: 14px;
+        text-align: center;
+        width: 100%; /* S'assure que le texte est centré sur toute la largeur */
+    }
 }
 
-.loginButtonText{
+.loginButtonText {
     color: black;
     text-decoration: none;
     font-family: $font-primary;
