--- a/cleanupCrew/frontend/src/pageComponents/loginScreen/loginScreen.scss
+++ b/cleanupCrew/frontend/src/pageComponents/loginScreen/loginScreen.scss
@@ -1,17 +1,17 @@
-html{
+html {
     margin: 0;
     padding: 0;
     overflow: hidden; 
     box-sizing: border-box;
 }
 
-body{
+body {
     height: 100%;
     width: 100%;
     margin: 0;
 }
 
-#root{
+#root {
     height: 100%;
     width: 100%;
 }
@@ -24,5 +24,8 @@ body{
     background: linear-gradient(210deg, rgba(168,223,138,1) 14%, rgba(255,255,255,1) 26%, rgba(255,255,255,1) 36%, rgba(255,255,255,1) 71%, rgba(254,235,168,1) 100%);
     height: 100vh;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
-
