--- a/cleanupCrew/frontend/src/pageComponents/loginScreen/loginScreen.scss
+++ b/cleanupCrew/frontend/src/pageComponents/loginScreen/loginScreen.scss
@@ -21,8 +21,7 @@ body {
     padding: 0;
     box-sizing: border-box;
     background: rgb(168,223,138);
-    background: linear-gradient(210deg, rgba(168,223,138,1) 14%, rgba(255,255,255,1) 26%, rgba(255,255,255,1) 36%, rgba(255,255,255,1) 71%, rgba(254,235,168,1) 100%);
-    height: 100vh;
+    background: linear-gradient(210deg, rgba(168,223,138,1) 0%, rgba(255,255,255,1) 35%, rgba(255,255,255,1) 50%, rgba(255,255,255,1) 65%, rgba(254,235,168,1) 100%);    height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
