feat(frontend): small changes in styling

--- a/cleanupCrew/frontend/src/components/quizWellDone/quizWellDone.scss
+++ b/cleanupCrew/frontend/src/components/quizWellDone/quizWellDone.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     .quizWellDoneButton{
             width: 100%;
-            background-color: $color-light-green;
+            background-color: $color-green;
             border: 0;
             border-radius: 32px;
             padding-top: 12px;
