--- a/cleanupCrew/frontend/src/components/getStarted/getStarted.scss
+++ b/cleanupCrew/frontend/src/components/getStarted/getStarted.scss
@@ -8,14 +8,14 @@
     flex-direction: column;
     .getStartedButton{
             width: 100%;
-            background-color: $color-light-green;
+            background-color: $color-green;
             border: 0;
             border-radius: 32px;
-            padding-top: 12px;
-            padding-bottom: 12px;
+            padding-top: 8px;
+            padding-bottom: 8px;
         .buttonText{
             font-family: $font-primary;
-            font-weight: 500;
+            font-weight: 400;
             font-size: 20px;
             text-decoration: none;
             color: black;
@@ -27,6 +27,7 @@
         p{
             color: black;
             font-family: $font-primary;
+            font-size: $font-size-md;
             font-weight: 500;
         }
     }
