--- a/cleanupCrew/frontend/src/components/loginSection/loginSection.scss
+++ b/cleanupCrew/frontend/src/components/loginSection/loginSection.scss
@@ -19,7 +19,7 @@
     }
     button {
         width: 12rem;
-        background-color: $color-light-green;
+        background-color: $color-green;
         border: 0;
         border-radius: 32px;
         padding-top: 8px;
@@ -30,16 +30,16 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        position: relative; /* Ajout pour positionner le message d'erreur */
+        position: relative; 
     }
     .error {
-        position: absolute; /* Positionnement absolu pour ne pas affecter le layout */
-        top: 100%; /* Positionne le message juste en dessous du formulaire */
-        margin-top: 1rem; /* Espacement supplémentaire */
-        color: red; /* Couleur pour le message d'erreur */
+        position: absolute; 
+        top: 100%; 
+        margin-top: 1rem; 
+        color: red; 
         font-size: 14px;
         text-align: center;
-        width: 100%; /* S'assure que le texte est centré sur toute la largeur */
+        width: 100%;
     }
 }
 
@@ -47,6 +47,6 @@
     color: black;
     text-decoration: none;
     font-family: $font-primary;
-    font-weight: 500;
-    font-size: 14px;
+    font-weight: 400;
+    font-size: 20px;
 }
