--- a/cleanupCrew/frontend/src/components/logintext/loginText.scss
+++ b/cleanupCrew/frontend/src/components/logintext/loginText.scss
@@ -14,6 +14,9 @@
         width: 100%;
         color: black;
         $font-primary: 'Instrument Sans';
+        font-weight: 500;
+        font-size: 18px;
+
     }
 }
 
