--- a/cleanupCrew/frontend/src/components/quizGetStarted/quizGetStarted.scss
+++ b/cleanupCrew/frontend/src/components/quizGetStarted/quizGetStarted.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     .quizGetStartedButton{
             width: 100%;
-            background-color: $color-light-green;
+            background-color: $color-green;
             border: 0;
             border-radius: 32px;
 
