--- a/cleanupCrew/frontend/src/var.scss
+++ b/cleanupCrew/frontend/src/var.scss
@@ -1,22 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Saira+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 // Colors
-$color-navar: #F8F3DB;
-$color-beige: #FFFBE9;
-$color-mint:  #D7FFDB80;
-$color-light-green: #A8DF8A;
+$color-green: #A8DF8A;
+$color-light-green:  #EDF6E9;
 $color-blue: #6EB7EB;
+$color-light-blue: #E9F1F5;
+$color-beige: #FAF7ED;
 $color-yellow: #F6D65D;
-$color-grey: #D9D9D9;
+$color-bg-yellow: #FEEBA8;
+$color-grey: #E9E9E9;
 $color-red: #F17174;
-$color-white: #ffffff;
+$color-white: #fafafa;
+$color-black:#000000;
 
 // Font Sizes
 $font-size-xs: 12px;
 $font-size-sm: 14px;
 $font-size-md: 16px;
 $font-size-lg: 18px;
-$font-size-xl: 24px;
+$font-size-xl: 20px;
 $font-size-xxl: 32px;
 
 // Fonts
