feat(frontend): small changes in styling

--- a/cleanupCrew/frontend/src/components/quizGetStarted/quizGetStarted.scss
+++ b/cleanupCrew/frontend/src/components/quizGetStarted/quizGetStarted.scss
@@ -18,6 +18,7 @@
             font-size: 20px;
             text-decoration: none;
             color: black;
+            margin: 8px;
         }
     }
 
