--- a/cleanupCrew/frontend/src/components/headerTimer/headerTimer.scss
+++ b/cleanupCrew/frontend/src/components/headerTimer/headerTimer.scss
@@ -13,5 +13,22 @@
         font-weight: 600;
         font-family: $font-primary;
         font-size: 20px;
+
+        &--danger {
+            color: #ff0000;
+            animation: pulse 1s infinite;
+          }
+    }
+
+    @keyframes pulse{
+        0% {
+            opacity: 1;
+          }
+          50% {
+            opacity: 0.7;
+          }
+          100% {
+            opacity: 1;
+          }
     }
 }
